--- a/style.css
+++ b/style.css
@@ -1,8 +1,93 @@
-body {
-    background-color: lightblue;
+html{
+    font-size: 10px;
 }
+main{
+    background: #eee;
+    margin: 30px 8px;
+    border-radius: 5px;
+    padding: 15px;
+}
+body{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    text-align: center;
+    color: #333;
+    margin: 0;
+}
+h1{
+    display: block;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+figure{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+}
+#img-div{
+    background: white;
+    padding: 10px;
+    margin: 0;
+}
+img{
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+    height: auto;
+}
+figcaption{
+    display: block;
+}
+#img-caption{
+    margin: 15px 0 5px 0;
+}
+section{
+    display: block;
+}
+#headline{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-size: 1.17em;
+    font-weight: bold;
+    margin: 50px 0;
+}
+ul{
+    max-width: 550px;
+    margin: 0 auto 50px auto;
+    line-height: 1.6;
+    text-align: left;
+}
+li{
     
-h1 {
-    color: navy;
-    margin-left: 20px;
+    margin: 16px 0;
+    display: list-item;
+    
+}
+blockquote{
+    max-width: 545px;
+    margin: 0 auto 50px auto;
+    text-align: left;
+    font-style: italic;
+}
+cite{
+    font-style: italic;
+}
+a{
+    color: darkgray;
 }
